# cmake_vcpkg_starter_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
examples/: CMakeLists.txt
examples/src/: main.cpp
foo/: CMakeLists.txt
foo/include/foo/: foo.h
foo/src/: foo.cpp
tests/: CMakeLists.txt
tests/src/: test_foo.cpp
